Fix horizontal scroll issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@ body,
   background-color: var(--color-background);
   color: var(--color-text);
   border: 0;
+  overflow-x: hidden;
+
+
 }
 
 .container {
